--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,20 @@
 </head>
 <body>
 
-<%= yield %>
+	<% if user_signed_in? %>
+		Logged in as <%= current_user.username ? current_user.username : current_user.email %>
+		<%= link_to "Edit Profile", edit_user_registration_path %>
+		<%= link_to "Logout", destroy_user_session_path, method: :delete %>
+	<% else %>
+		<%= link_to "Sign Up", new_user_registration_path %>
+		<%= link_to "Login", new_user_session_path %>
+	<% end %>
+
+	<% flash.each do |name, msg| %>
+		<%= content_tag :div, msg, id: "flash_#{name}" %>
+	<% end %>
+	
+	<%= yield %>
 
 </body>
 </html>
