--- a/app/views/users/registrations/index.html.erb
+++ b/app/views/users/registrations/index.html.erb
@@ -1,6 +1,7 @@
 <h1>hello</h1>
 <ul>
 	<% @users.each do |user| %>
-		<li> <%= link_to user.username, user %> - <%= user.email %></li>
+		<% name = user.username.blank? ? "User" : user.username  %>
+		<li> <%= link_to name , user %> - <%= user.email %></li>
 	<% end %>
 </ul>
