--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,17 @@
 </head>
 <body>
 
-	<% if user_signed_in? %>
-		Logged in as <%= current_user.username ? current_user.username : current_user.email %>
-		<%= link_to "Edit Profile", edit_user_registration_path %>
-		<%= link_to "Logout", destroy_user_session_path, method: :delete %>
-	<% else %>
-		<%= link_to "Sign Up", new_user_registration_path %>
-		<%= link_to "Login", new_user_session_path %>
-	<% end %>
-
+	<div>
+		<% if user_signed_in? %>
+			Logged in as <%= link_to current_user.name, dashboard_path %>
+			<%= link_to "Edit Profile", edit_user_registration_path %>
+			<%= link_to "Logout", destroy_user_session_path, method: :delete %>
+		<% else %>
+			<%= link_to "Sign Up", new_user_registration_path %>
+			<%= link_to "Login", new_user_session_path %>
+		<% end %>	
+	</div>
+	
 	<% flash.each do |name, msg| %>
 		<%= content_tag :div, msg, id: "flash_#{name}" %>
 	<% end %>
