remove _shout.html.ern from shared folder and bring it back to shouts folder in view

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -10,6 +10,4 @@
 
 <br>
 
-<% @shouts.each do |shout| %>
-	<%= render partial: "shared/shout", locals: { shout: shout} %>
-<% end %>
+<%= render @shouts %>
