--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,4 @@
 
 <p><%= @user.email %></p>
 
-
-<% @shouts.each do |shout| %>
-	<%= render partial: "shared/shout", locals: { shout: shout} %>
-<% end %>
+<%= render @shouts %>
