photo_shout and uploadin with paperclip

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -8,6 +8,9 @@
   <%= f.submit "Shout!" %>
 <% end %>
 
-<br>
+<%= form_for @photo_shout do |f| -%>
+  <%= f.file_field :image %>
+  <%= f.submit "Shout!" %>
+<% end %>
 
 <%= render @shouts %>
