--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -2,6 +2,8 @@
 	<%= link_to shout.user.name, shout.user %>
 	shouted: 	
 	<%#= link_to shout.body, shout %>	
-	<%= render shout.content %>
+	<div>
+		<%= render shout.content %>
+	</div>
 	<%= time_ago_in_words(shout.created_at) %> ago
 <% end %>
