gravatar helper method

--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -1,4 +1,5 @@
 <%= div_for	shout do %> 
+<%= gravatar shout.user %>
 	<%= link_to shout.user.name, shout.user %>
 	shouted: 	
 	<%#= link_to shout.body, shout %>	
