--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	
+	<%= form_for(:search, url: search_path, method: :get) do |f| -%>
+	  <%= f.text_field :term %>
+	  <%= f.submit "Search" %>
+	<% end %>
 
 	<div>
 		<% if user_signed_in? %>
