--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <h2><%= @user.name %>'s profile</h2>
-
-<%= follow_button @user %>
+	
+<% if current_user.can_follow? @user %>
+	<%= follow_button @user %>
+<% end %>
 
 <%= render @shouts %>
