--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,14 @@
 <h2><%= @user.name %>'s profile</h2>
-	
+
 <% if current_user.can_follow? @user %>
 	<%= follow_button @user %>
 <% end %>
 
 <%= render @shouts %>
+<hr>
+
+<% if @user.vehicle.present? %>
+	<%= render 'vehicles/show' %>	
+<% else %>
+	<p><%= link_to "Enter your car details", new_user_vehicles_path(@user) %></p>
+<% end %>
