--- a/app/views/vehicles/new.html.erb
+++ b/app/views/vehicles/new.html.erb
@@ -1,5 +1,9 @@
 <h1>New vehicle</h1>
 
-<%= render 'form' %>
+<%= form_for @vehicle,  url: {action: "create"} do |f| %>
 
-<%= link_to 'Back', vehicles_path %>
+<%= render partial: 'form', locals: {f: f} %>
+
+<% end %>
+
+<%= link_to 'Back', current_user %>
