--- a/app/views/vehicles/new.html.erb
+++ b/app/views/vehicles/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New vehicle</h1>
 
-<%= form_for @vehicle,  url: {action: "create"} do |f| %>
+<%= simple_form_for @vehicle,  url: {action: "create"} do |f| %>
 
 <%= render partial: 'form', locals: {f: f} %>
 
