create vehicle_model and vehicle_brand

--- a/app/views/vehicles/_show.html.erb
+++ b/app/views/vehicles/_show.html.erb
@@ -27,7 +27,7 @@
 
 <p>
   <strong>Vehicle model:</strong>
-  <%= @vehicle.vehicle_model %>
+  <%= @vehicle.vehicle_model.vehicle_brand.name %> - <%= @vehicle.vehicle_model.name %>
 </p>
 
 <%= link_to 'Edit', edit_user_vehicles_path(@user) %>
