--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Country:</strong>
-  <%= @state.country %>
+  <%= @state.country.name %>
 </p>
 
 <%= link_to 'Edit', edit_state_path(@state) %> |
