--- a/app/views/users/_single.html.erb
+++ b/app/views/users/_single.html.erb
@@ -1,1 +1,9 @@
-<%=  @user.firstname %>
+<%=  table_show_cell "First Name", @user.firstname %>
+<%=  table_show_cell "Last Name", @user.lastname %>
+<%=  table_show_cell "Username", @user.username %>
+<%=  table_show_cell "Tel", @user.tel %>
+<%=  table_show_cell "Mobile", @user.mobile %>
+<%=  table_show_cell "City", @user.city %>
+<%=  table_show_cell "Address", @user.address %>
+<%=  table_show_cell "Post Code", @user.post_code %>
+<%=  table_show_cell "Image", @user.image %>
