--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,9 +1,15 @@
 <h1>Listing cities</h1>
+<%= link_to 'New City', new_city_path %>
+<%= link_to 'Upgrade All Cities', upgrade_cities_path %>
 
 <table>
   <thead>
     <tr>
+      <th>id</th>
       <th>Name</th>
+      <th>Local Name</th>
+      <th>State Name</th>
+      <th>Country Name</th>
       <th>State</th>
       <th>Latitude</th>
       <th>Longitude</th>
@@ -16,8 +22,11 @@
   <tbody>
     <% @cities.each do |city| %>
       <tr>
+        <td><%= city.id %></td>
         <td><%= city.name %></td>
-        <td><%= city.state.name %></td>
+        <td><%= city.local_name %></td>
+        <td><%= city.state.local_name %></td>
+        <td><%= city.state.country.local_name %></td>
         <td><%= city.latitude %></td>
         <td><%= city.longitude %></td>
         <td><%= link_to 'Show', city %></td>
@@ -30,4 +39,3 @@
 
 <br>
 
-<%= link_to 'New City', new_city_path %>
