--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -6,8 +6,13 @@
 </p>
 
 <p>
+  <strong>Local Name:</strong>
+  <%= @city.local_name %>
+</p>
+
+<p>
   <strong>State:</strong>
-  <%= @city.state.name %>
+  <%= @city.state.local_name %>
 </p>
 
 <p>
@@ -22,3 +27,7 @@
 
 <%= link_to 'Edit', edit_city_path(@city) %> |
 <%= link_to 'Back', cities_path %>
+<br>
+
+<%= map_address(@city, 9) %>
+
