--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -3,7 +3,9 @@
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Name</th>
+      <th>Local Name</th>
       <th>Country</th>
       <th></th>
       <th></th>
@@ -14,8 +16,10 @@
   <tbody>
     <% @states.each do |state| %>
       <tr>
+        <td><%= state.id %></td>
         <td><%= state.name %></td>
-        <td><%= state.country %></td>
+        <td><%= state.local_name %></td>
+        <td><%= state.country.local_name %></td>
         <td><%= link_to 'Show', state %></td>
         <td><%= link_to 'Edit', edit_state_path(state) %></td>
         <td><%= link_to 'Destroy', state, method: :delete, data: { confirm: 'Are you sure?' } %></td>
