--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -1,21 +1,12 @@
-<!--   <% if @vehicle.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@vehicle.errors.count, "error") %> prohibited this vehicle from being saved:</h2>
-
-      <ul>
-      <% @vehicle.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %> -->
-
-  <%= f.input :color %>
-  <%= f.input :number_plate %>
+  <%= f.input :color, input_html: { class: 'form-control' } %>
+  <%= f.input :number_plate, input_html: { class: 'form-control' }  %>
   <%= f.input :air_condition %>
-  <%= f.input :year, as: :date, start_year: Date.today.year - 40,
-                              end_year: Date.today.year, discard_day: true,
-                              order: [:year] %>
-  <%= f.input :image %>
-  <%= f.input :vehicle_model_id %>
+  <%= f.input :year, as: :date,
+              input_html: { class: 'form-control' }, 
+              start_year: Date.today.year - 40,
+              end_year: Date.today.year, discard_day: true,
+              order: [:year] %>
+  <%= f.input :image, input_html: { class: 'form-control' }  %>
+  <%= f.association :vehicle_model, input_html: { class: 'form-control' },
+              :label_method => lambda { |vehicle_model| "#{vehicle_model.vehicle_brand.name} | #{vehicle_model.name}" } %>
   <%= f.button :submit %>
