--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,22 +3,33 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <%= f.input :email %>
 
+  <h2>Personal Detail</h2>
+  <%= f.input :image %>
+  <%= f.input :gender %>
+  <%= f.input :username %>
+  <%= f.input :firstname %>
+  <%= f.input :lastname %>
+
+  <h2>Contact Detail</h2>
+  <%= f.input :tel %>
+  <%= f.input :mobile %>
+  <%= f.input :address %>
+  <%= f.input :post_code %>
+  
+  <h2>Acount settings</h2>
+  <%= f.input :email %>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <%= f.input :username %>
-
-  <%= f.input :password, hint: "leave blank if you don't want to change it." %>
-
+  <% end %>  
+  <%= f.input :password, 
+              hint: "leave blank if you don't want to change it." %>
   <%= f.input :password_confirmation %>
+  <%= f.input :current_password, 
+              hint: "we need your current password to confirm your changes." %>
+            
+  <%= f.button :submit %>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
-
-  <div><%= f.submit "Update" %></div>
 <% end %>
 
 <h3>Cancel my account</h3>
