--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -2,10 +2,9 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :date %>
     <%= f.input :total_available_seats %>
     <%= f.input :detail %>
-    <%= f.association :user %>
+    <%= f.association :driver %>
   </div>
 
   <div class="form-actions">
