--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -3,10 +3,9 @@
 <table>
   <thead>
     <tr>
-      <th>Date</th>
       <th>Total available seats</th>
       <th>Detail</th>
-      <th>User</th>
+      <th>Driver</th>
       <th></th>
       <th></th>
       <th></th>
@@ -16,10 +15,9 @@
   <tbody>
     <% @trips.each do |trip| %>
       <tr>
-        <td><%= trip.date %></td>
         <td><%= trip.total_available_seats %></td>
         <td><%= trip.detail %></td>
-        <td><%= trip.user %></td>
+        <td><%= trip.driver.name %></td>
         <td><%= link_to 'Show', trip %></td>
         <td><%= link_to 'Edit', edit_trip_path(trip) %></td>
         <td><%= link_to 'Destroy', trip, method: :delete, data: { confirm: 'Are you sure?' } %></td>
