--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -3,10 +3,16 @@
 
   <div class="form-inputs">
     <%= f.input :total_available_seats %>
-    <%= f.input :detail %>
-    <%= f.association :driver %>
   </div>
-
+  <hr>
+  <%= f.simple_fields_for :subtrips do |builder| %>
+  	<fieldset>
+    	<%= render 'subtrip_fields', f: builder %>
+    </fieldset>
+  <% end %>
+  <%= link_to_add_fields "Add Subtrip", f, :subtrips %>
+	<hr>	
+  <%= f.input :detail %>
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
