--- a/app/views/trips/_subtrip_fields.html.erb
+++ b/app/views/trips/_subtrip_fields.html.erb
@@ -1,6 +1,6 @@
 <fieldset>
-  <%= f.input :datetime %>  
-  <%= f.input :price %>  
+  <%= f.input :datetime, as: :time %>  
+  <%= f.association :origin %>  
   <%= f.hidden_field :_destroy %>
   <%= link_to "Remove Subtrip", "#", class: "remove_fields" %>  
 </fieldset>
