--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing trip</h1>
 
-<%= render 'form' %>
+<%= render 'form_edit' %>
 
 <%= link_to 'Show', @trip %> |
 <%= link_to 'Back', trips_path %>
