--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 			Logged in as <%= link_to current_user.name, dashboard_path %>
 			<%= link_to "Edit Profile", edit_user_registration_path %>
 			<%= link_to "show Profile", current_user %>
+			<%= link_to "Insert trip", new_trip_path %>
 			<%= link_to "Logout", destroy_user_session_path, method: :delete %>
 		<% else %>
 			<%= link_to "Sign Up", new_user_registration_path %>
