--- a/app/views/bookings/create.html.erb
+++ b/app/views/bookings/create.html.erb
@@ -1,1 +1,11 @@
-<%= @data.inspect %>
+
+<ul>
+	<% @all_conflicts.each do |s| %>
+		<li>
+			<%= s.seats %> -- <%= s.origin_id %> --> <%= s.destination_id %> 
+		</li>
+	<% end %>
+</ul>
+
+<hr>
+<%= @subtrip.seats %>
