--- a/app/views/search_subtrips/show.html.erb
+++ b/app/views/search_subtrips/show.html.erb
@@ -1,6 +1,15 @@
-<% @search_subtrips.subtrips.each do |s| %>
+<%= form_for :search_subtrip, url: search_search_subtrips_path, method: :get do |f| %>
 	
-	<%= link_to s.inspect, subtrip_path(s.id) %>
+	<%= f.label :origin_id, "origin_id" %>
+	<%= f.text_field :origin_id %>
+	<%= f.select :origin_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}%>
+
+	<%= f.label :destination_id, "Destination _Id" %>
+	<%= f.text_field :destination_id %>
+	<%= f.select :destination_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}%> <br>
+	ffd
+	
+	<%= f.date_field :date, value: DateTime.now.to_date %>
+
+	<%= f.submit "Submit" %>
 <% end %>
-
-
