--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -6,7 +6,7 @@
               start_year: Date.today.year - 40,
               end_year: Date.today.year, discard_day: true,
               order: [:year] %>
-  <%= f.input :image, input_html: { class: 'form-control' }  %>
+  <%= f.input :image, as: :file, input_html: { class: 'form-control' }  %>
   <%= f.association :vehicle_model, input_html: { class: 'form-control' },
               :label_method => lambda { |vehicle_model| "#{vehicle_model.vehicle_brand.name} | #{vehicle_model.name}" } %>
   <%= f.button :submit %>
