--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,29 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<%= form_for(:search, url: search_path, method: :get) do |f| -%>
-	  <%= f.text_field :term %>
-	  <%= f.submit "Search" %>
-	<% end %>
-
-	<div>
-		<% if user_signed_in? %>
-			Logged in as <%= link_to current_user.name, dashboard_path %>
-			<%= link_to "Edit Profile", edit_user_registration_path %>
-			<%= link_to "show Profile", current_user %>
-			<%= link_to "Insert trip", new_trip_path %>
-			<%= link_to "Logout", destroy_user_session_path, method: :delete %>
-		<% else %>
-			<%= link_to "Sign Up", new_user_registration_path %>
-			<%= link_to "Login", new_user_session_path %>
-		<% end %>	
-	</div>
+<div class="container">
 	
+	<%= render 'header' %>
+
+	<%= render 'navbar' %>
+
+	<%= render 'searches/form' %>
+
+
+	<%= flash_creator flash %>
+
 	<% flash.each do |name, msg| %>
 		<%= content_tag :div, msg, id: "flash_#{name}" %>
 	<% end %>
 	
 	<%= yield %>
-
+</div>
 </body>
 </html>
