--- a/app/views/search_subtrips/_search_form.html.erb
+++ b/app/views/search_subtrips/_search_form.html.erb
@@ -2,11 +2,15 @@
 	
 	<%= f.text_field :origin_id, placeholder: "Origin" %>
 	<%= f.select :origin_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}%>
+	<%= f.hidden_field :origin_lat %>
+	<%= f.hidden_field :origin_lng %>
 
 	<%= f.text_field :destination_id, placeholder:"Destination" %>
 	<%= f.select :destination_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}%> 
+	<%= f.hidden_field :destination_lat %>
+	<%= f.hidden_field :destination_lng %>
 	
 	<%= text_field_tag :date, Date.today, class: "datepicker" %>
-
+	
 	<%= f.submit "Search" %>
 <% end %>
