add jalalidate to gemfile and convert jalali date to geregurian date in search subtrip form

--- a/app/views/search_subtrips/_search_form.html.erb
+++ b/app/views/search_subtrips/_search_form.html.erb
@@ -10,7 +10,7 @@
 	<%= f.hidden_field :destination_lat %>
 	<%= f.hidden_field :destination_lng %>
 	
-	<%= text_field_tag :date, Date.today, class: "datepicker" %>
+	<%= f.text_field :date, class: "datepicker" %>
 	
 	<%= f.submit "Search" %>
 <% end %>
