--- a/app/views/search_subtrips/_search_item.html.erb
+++ b/app/views/search_subtrips/_search_item.html.erb
@@ -15,7 +15,7 @@
 			<tr>			
 				<td> <%= i.origin.name %> </td>
 				<td> <%= i.destination.name %></td>
-				<td> <%= i.datetime.to_s(:time) %></td>
+				<td> <%= i.date_time.to_s(:time) %></td>
 				<td> <%= i.price %></td>
 				<td> <%= pluralize(i.seats.count(0), 'Place') %> Available </td>
 				<td><%= link_to "View Detail", subtrip_path(i.id) %></td>
