--- a/app/views/trips/_subtrip_fields_edit.html.erb
+++ b/app/views/trips/_subtrip_fields_edit.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <%= f.input :datetime, as: :time %>  
+  <%= f.input :date_time, as: :time %>  
   <%= f.object.origin.name %> -----> <%= f.object.destination.name %> 
 	<%= f.select :price, (0..100).step(1).map{|s| ["#{s} EURO", s]}%>
 
