replace user image with avatar attachment

--- a/app/views/users/_single_profile.html.erb
+++ b/app/views/users/_single_profile.html.erb
@@ -2,7 +2,7 @@
 <table class="table">
 	<tbody>
 		<h3>Personal detail</h3>	
-		<%=  table_show_cell "Image", @user.image %>
+		<%=  table_show_cell "Image", @user.avatar %>
 		<%=  table_show_cell "Gender", @user.gender %>
 		<%=  table_show_cell "First Name", @user.firstname %>
 		<%=  table_show_cell "Last Name", @user.lastname %>
