--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
 
 
   <h2>Personal Detail</h2>
-  <%= f.input :image %>
+  <%= f.input :avatar, as: :file %>
   <%= f.input :gender %>
   <%= f.input :username %>
   <%= f.input :firstname %>
