--- a/app/views/trips/_subtrip_fields.html.erb
+++ b/app/views/trips/_subtrip_fields.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <%= f.input :datetime, as: :time %>  
+  <%= f.input :date_time, as: :time %>  
   <%= f.association :origin %>  
   <%= f.hidden_field :_destroy %>
   <%= link_to "Remove Subtrip", "#", class: "remove_fields" %>  
