--- a/app/views/trips/_form_new.html.erb
+++ b/app/views/trips/_form_new.html.erb
@@ -3,9 +3,16 @@
   Total seats: <%= f.select :total_available_seats, 1..@vehicle_seats, selected: @vehicle_seats %> <br>
 
   
-  Departure date: 
-    <%= time_select :first_sub, :date_time %>  <br>
   Departure Time: 
+    <%= select :first_sub, :jminute, options_for_minute %> : 
+    <%= select :first_sub, :jhour, options_for_hour %>
+
+    <%= time_select :first_sub, :date_time %>  <br>
+  Departure Date: 
+    <br>
+    <%= select :first_sub, :jyear, options_for_year %> 
+    <%= select :first_sub, :jmonth, options_for_month %>
+    <%= select :first_sub, :jday, options_for_day %> 
     <%= date_select :first_sub, :date_time %>  <br>
   Origin: 
     <%= collection_select :first_sub, :origin_id, City.all, :id, :name %><br>
