--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
 			<% if user_signed_in? %>
-				Logged in as <%= link_to current_user.name, dashboard_path %>
+				<li><%= link_to gravatar(current_user, 32, "img-rounded"), dashboard_path %> </li>
 				<li><%= link_to "Edit Profile", edit_user_registration_path %></li>
 				<li><%= link_to "show Profile", current_user %></li>
 				<li><%= link_to "Insert trip", new_trip_path %></li>
