--- a/app/views/trips/_subtrip_fields.html.erb
+++ b/app/views/trips/_subtrip_fields.html.erb
@@ -1,13 +1,14 @@
 <fieldset>
+	<hr>
   <%= f.select :jminute, options_for_minute, {:include_blank => true} %> : 
   <%= f.select :jhour, options_for_hour, {:include_blank => true} %>
-	<br>
-  <%= f.select :jyear, options_for_year %> 
-  <%= f.select :jmonth, options_for_month %>
+	at:
   <%= f.select :jday, options_for_day %> 
-
-  <%= f.input :date_time, as: :time %>  
-  <%= f.association :origin, wrapper_html: { :style => 'display: inline' } %>  
+  <%= f.select :jmonth, options_for_month %>
+  <%= f.select :jyear, options_for_year %> 
+	<br>
+  <%= f.association :origin, label: 'Via: ' , wrapper_html: { :style => 'display: inline' } %>  
   <%= f.hidden_field :_destroy %>
   <%= link_to "Remove", "#", class: "remove_fields" %>  
+  <hr>
 </fieldset>
