--- a/app/views/search_subtrips/show.html.erb
+++ b/app/views/search_subtrips/show.html.erb
@@ -1,2 +1,11 @@
 <%= render 'search_form' %>
 
+<% if @subtrips.any? %>
+	<% @subtrips.each do |s| %>
+		<%= s.inspect %> <hr>
+	 <% end %>	
+<% else %>
+	<p>No record with this condition. please try again.</p>
+<% end %>
+
+
