--- a/app/views/search_subtrips/search.html.erb
+++ b/app/views/search_subtrips/search.html.erb
@@ -1,26 +1,7 @@
 <%= render 'search_form' %>
-<% if @search_subtrip.subtrips(3).any? %>
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				<th>From</th>
-				<th>To</th>
-				<th>At</th>
-				<th>Price</th>
-				<th>Driver</th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @search_subtrip.subtrips(3).each do |s| %>
-					<%= render partial: 'subtrip', locals:{s: s} %>
-			 <% end %>	
-		 </tbody>
-		</table>
+<% if @search_subtrips.subtrips(3).any? %>
+	<% subtrips = @search_subtrips.subtrips(3) %>
+	<%= render partial: 'subtrips', locals:{subtrips: subtrips} %>
 <% else %>
 	<p>No record with this condition. please try again.</p>
 <% end %>
-
-
-
-<%#= (ap @search_subtrip).html_safe %> 
-
