--- a/app/views/search_subtrips/show.html.erb
+++ b/app/views/search_subtrips/show.html.erb
@@ -1,21 +1,7 @@
 <%= render 'search_form' %>
 <% if @search_subtrips.any? %>
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				<th>From</th>
-				<th>To</th>
-				<th>At</th>
-				<th>Price</th>
-				<th>Driver</th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @search_subtrips.each do |s| %>
-				<%= render partial: 'subtrip', locals:{s: s} %>
-			<% end %>	
-		</tbody>
-	</table>
+	<% subtrips = @search_subtrips %>
+	<%= render partial: 'subtrips', locals:{subtrips: subtrips} %>
 <% end %>
 
 
