--- a/app/views/subtrips/show.html.erb
+++ b/app/views/subtrips/show.html.erb
@@ -1,13 +1,10 @@
-<h1>Subtrips</h1>
-<%= @subtrip.inspect %>
-
 <table class="table">
   <tbody>
   <h3>Subtrip detail</h3>
-		<%= table_show_cell "From"	,@subtrip.origin.name %>
-		<%= table_show_cell "To"  	,@subtrip.destination.name %>
-		<%= table_show_cell "On"		,@subtrip.date_time.to_s(:date) %>
-		<%= table_show_cell "At"		,@subtrip.date_time.to_s(:time) %>
+		<%= table_show_cell "From"	,@subtrip.origin.local_name %>
+		<%= table_show_cell "To"  	,@subtrip.destination.local_name %>
+		<%= table_show_cell "On"		,JalaliDate.new(@subtrip.date_time).strftime("%Y-%m-%d - %A") %>
+		<%= table_show_cell "At"		,JalaliDate.new(@subtrip.date_time).strftime("%I:%M - %p") %>
 		<%= table_show_cell "Price" ,@subtrip.price %>
   </tbody>
 </table>
