create two methods, jalali_time and jalali_date and use in subtrip show

--- a/app/views/search_subtrips/_subtrip_row.html.erb
+++ b/app/views/search_subtrips/_subtrip_row.html.erb
@@ -6,7 +6,8 @@
 	<td>
 		<%= s.trip.driver.name %> 
 		<%= gravatar(s.trip.driver, 32, "img-rounded img-circle") %>
-		<span class="ratingSmall"></span>
+		<!-- TODO Raiting -->
+		<span class="ratingSmall">TODO</span>
 	</td>
 	<td><%= link_to "Detail", subtrip_path(s.id) %></td>
 </tr>
