--- a/app/views/search_subtrips/_subtrip_row.html.erb
+++ b/app/views/search_subtrips/_subtrip_row.html.erb
@@ -1,6 +1,6 @@
 <tr>
-	<td><%= s.origin.name %> </td>
-	<td><%= s.destination.name %> </td>
+	<td><%= s.origin.local_name %> </td>
+	<td><%= s.destination.local_name %> </td>
 	<td><%= s.date_time.to_s(:time) %> </td>
 	<td><%= s.price %> </td>
 	<td>
