--- a/app/views/search_subtrips/_search_form.html.erb
+++ b/app/views/search_subtrips/_search_form.html.erb
@@ -1,16 +1,32 @@
-<%= form_for :search_subtrip, url: search_search_subtrips_path, method: :get do |f| %>
-	
-	<%= f.text_field :origin_id, placeholder: "Origin" %>
-	<%= f.select :origin_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}%>
-	<%= f.hidden_field :origin_lat %>
-	<%= f.hidden_field :origin_lng %>
+<div class="container">
+	<%= simple_form_for :search_subtrip, url: search_search_subtrips_path, method: :get, 
+    :html => { :class => 'form-inline',role: "form" } do |f| %>
+		
+		<span class="origin_input">
+			<div class="form-group">
+				<%= f.input :origin_id,:label => false, placeholder: "Origin", class: "form-control" %>
+			</div>
+			<div class="form-group">
+				<%= f.select :origin_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, class: "form-control"%>
+			</div>
+		</span>
+		
+		<span class="destination_input">
+			<div class="form-group">
+				<%= f.input :destination_id,:label => false, placeholder:"Destination", class: "form-control" %>
+			</div>
+			<div class="form-group">
+				<%= f.select :destination_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]} %> 
+			</div>
+		</span>
 
-	<%= f.text_field :destination_id, placeholder:"Destination" %>
-	<%= f.select :destination_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}%> 
-	<%= f.hidden_field :destination_lat %>
-	<%= f.hidden_field :destination_lng %>
-	
-	<%= f.text_field :date, class: "datepicker" %>
-	
-	<%= f.submit "Search" %>
-<% end %>
+		<div class="form-group datepicker-input">
+			<%= f.text_field :date, class: "form-control datepicker" %>
+		</div>
+		<%= f.hidden_field :origin_lat %>
+		<%= f.hidden_field :origin_lng %>
+		<%= f.hidden_field :destination_lat %>
+		<%= f.hidden_field :destination_lng %>		
+		<%= f.submit "Search", class: "btn btn-primary" %>
+	<% end %>
+</div>
