add select2 css and js files to vender and use it in select city of trips/new

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require jquery-ui-1.10.3.custom.min
  *= require bootstrap
  *= require bootstrap-rtl
+ *= require select2
  *= require_self
  *= require_tree .
  */
