--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the trips controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#new_trip_form{
+	.row{
+		margin-bottom: 5px;
+	}
+	.trip-route{
+		margin-bottom: 5px;
+		background: none repeat scroll 0 0 #EFEFEF;
+    border-radius: 5px;
+    padding: 15px 25px;
+    .select-via-city{
+    	width: 200px;
+    	display: inline;
+    }
+    fieldset{
+			border: dotted 1px;
+			padding: 7px 19px;
+			margin-bottom: 3px;    	
+    }
+	}
+}
