--- a/app/views/trips/_subtrip_fields.html.erb
+++ b/app/views/trips/_subtrip_fields.html.erb
@@ -1,14 +1,39 @@
-<fieldset>
-	<hr>
-  <%= f.select :jminute, options_for_minute, {:include_blank => true} %> : 
-  <%= f.select :jhour, options_for_hour, {:include_blank => true} %>
-	at:
-  <%= f.select :jday, options_for_day %> 
-  <%= f.select :jmonth, options_for_month %>
-  <%= f.select :jyear, options_for_year %> 
-	<br>
-  <%= f.association :origin, label: 'Via: ' , wrapper_html: { :style => 'display: inline' } %>  
-  <%= f.hidden_field :_destroy %>
-  <%= link_to "Remove", "#", class: "remove_fields" %>  
-  <hr>
+  <fieldset class="col-sm-12 1col-sm-offset-3">
+
+  <!-- At -->
+    <div class="row">
+      <div class="col-sm-3">
+        At   
+      </div> 
+      <div class="col-sm-8">
+        <%= f.select :jminute, options_for_minute, {:include_blank => true} %> : 
+        <%= f.select :jhour, options_for_hour, {:include_blank => true} %>
+      </div>
+   </div>
+
+  <!-- At -->
+    <div class="row">
+      <div class="col-sm-3">
+        On   
+      </div> 
+      <div class="col-sm-8">
+        <%= f.select :jday, options_for_day %> 
+        <%= f.select :jmonth, options_for_month %>
+        <%= f.select :jyear, options_for_year %> 
+      </div>
+    </div>
+
+  <!-- Via -->
+    <div class="row">
+      <div class="col-sm-3">
+        Via   
+      </div> 
+      <div class="col-sm-8">
+        <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select-via-city form-control'} %>     
+        <%= f.hidden_field :_destroy %>
+        <%= link_to "Remove", "#", class: "remove_fields" %>  
+      </div>
+    </div>
+  
+
 </fieldset>
