--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -16,7 +16,7 @@
     	display: inline;
     }
     fieldset{
-			border: dotted 1px;
+    	border: dotted 1px #AEAEB6;
 			padding: 7px 19px;
 			margin-bottom: 3px;    	
     }
