--- a/app/assets/stylesheets/costum.scss.css
+++ b/app/assets/stylesheets/costum.scss.css
@@ -1,10 +1,17 @@
+body{
+	background: url('https://dvh6hceihc0bg.cloudfront.net/assets/striped_lens_@2X.png');
+}
+
+.container{
+	background: #f9f9f9;
+}
+
 #siteHeader{
-	background: url("headerBG-Recovered.gif") 10px bottom no-repeat;
+	background: url("https://s3-eu-west-1.amazonaws.com/shouter/static_files/css/images/headerBG.gif") 10px bottom no-repeat;
 	height: 100px;
 	border-bottom: 2px solid #91a022;
 }
 
 #siteLogo{
 	margin-top: 30px;
-
 }
