--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,7 +32,10 @@
               placeholder: "current password"  %>
             
   <%= f.button :submit %>
-
+  <% if current_user.is_admin? %>
+    <%= f.label :admin, "Admin" %>
+    <%= f.check_box :admin %>  
+  <% end %>
 <% end %>
 
 <h3>Cancel my account</h3>
