--- a/app/views/layouts/application_new_jquery.html.erb
+++ b/app/views/layouts/application_new_jquery.html.erb
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>Shouter</title>
-  <script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places" type="text/javascript"></script>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application_new_jquery", "data-turbolinks-track" => true %>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <%= javascript_include_tag "https://s3-eu-west-1.amazonaws.com/shouter/static_files/js/trips_external_all_in_one.js", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
