--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require jquery-ui-1.10.3.custom.min
+ *= require chosen
  *= require bootstrap
  *= require bootstrap-rtl
  *= require select2
